--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -10,12 +10,12 @@
 
 .navbar .container {
     background-color: #00CC00;
-    background-image: -moz-linear-gradient(top, #00CC00, #006b00);
-    background-image: -ms-linear-gradient(top, #00CC00, #006b00);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#00CC00), to(#006b00));
-    background-image: -webkit-linear-gradient(top, #00CC00, #006b00);
-    background-image: -o-linear-gradient(top, #00CC00, #006b00);
-    background-image: linear-gradient(top, #00CC00, #006b00);
+    background-image: -moz-linear-gradient(top, #00CC00, #00CC00);
+    background-image: -ms-linear-gradient(top, #00CC00, #00CC00);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#00CC00), to(#00CC00));
+    background-image: -webkit-linear-gradient(top, #00CC00, #00CC00);
+    background-image: -o-linear-gradient(top, #00CC00, #00CC00);
+    background-image: linear-gradient(top, #00CC00, #00CC00);
 }
 
 .navbar .navbar-brand {
